--- a/mms/web/css/style.css
+++ b/mms/web/css/style.css
@@ -5,7 +5,7 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 .header { position: fixed; width: 100%; height: 100px; z-index: 9999; color: #fff; min-width: 960px; }
 .header-background { position: fixed; width: 100%; height: 100px; z-index: 1; background: url('../images/bg.jpg'); background-position: center; background-size: 100%; -webkit-filter: blur(3px); }
 
-.header .notification { position: absolute; padding: 10px 16px 10px 16px; top: 13px; right: 20px; background-color: #F0F0F0; float: right; border-radius: 3px; }
+.header .notification { position: absolute; padding: 10px 16px 10px 16px; top: 13px; right: 20px; background-color: #F0F0F0; float: right; border-radius: 3px; display: none; }
 .header .notification a { font-weight: bold; font-size: 14px; color: #555 }
 
 .header .logout { position: absolute; padding: 2px 8px 2px 8px; bottom: 13px; right: 20px; background-color: #F0F0F0; float: right; border-radius: 3px; }
