--- a/mms/web/css/style.css
+++ b/mms/web/css/style.css
@@ -3,7 +3,7 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 /* Main Page - Header */
 
 .header { position: fixed; width: 100%; height: 100px; z-index: 9999; color: #fff; min-width: 960px; }
-.header-background { position: fixed; width: 100%; height: 100px; z-index: 1; background: url('../images/bg.jpg'); background-position: center; background-size: 100%; -webkit-filter: blur(3px); }
+.header-background { position: fixed; width: 100%; height: 100px; z-index: 1; background: url('../images/bg.jpg'); background-position: center; background-size: 100%; -webkit-filter: blur(3px); -moz-filter: blur(3px); -ms-filter: blur(3px); filter: blur(3px); }
 
 .header .notification { position: absolute; padding: 10px 16px 10px 16px; top: 13px; right: 20px; background-color: #F0F0F0; float: right; border-radius: 3px; display: none; }
 .header .notification a { font-weight: bold; font-size: 14px; color: #555 }
@@ -12,6 +12,7 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 .header .logout a { font-weight: bold; font-size: 14px; color: #888; text-decoration: none;}
 .header .name { position: absolute; font-weight: bold; font-size: 24px; top: 30px; left: 20px; text-shadow: 0px 0px 8px #888; }
 .header .address { position: absolute; font-size: 14px; top: 70px; left: 20px; text-shadow: 0px 0px 6px #222; }
+.header .address a { color: #F0F0F0; }
 
 
 
@@ -26,7 +27,7 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 .current-date { position: absolute; top: 8px; right: 0px; font-size: 20px; height: 24px; }
 .current-month { font-weight: bold; }
 
-.buttons-panel { position: absolute; top: 10px; font-size: 14px; }
+.buttons-panel { position: absolute; top: 10px; font-size: 16px; font-weight: bold; -webkit-user-select:none; -moz-user-select:none; -ms-user-select:none; user-select:none; }
 .buttons-panel a { cursor: pointer; margin: 2px; }
 
 .week { height: 20px; }
