--- a/mms/web/css/style.css
+++ b/mms/web/css/style.css
@@ -8,8 +8,10 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 .header .notification { position: absolute; padding: 10px 16px 10px 16px; top: 13px; right: 20px; background-color: #F0F0F0; float: right; border-radius: 3px; display: none; }
 .header .notification a { font-weight: bold; font-size: 14px; color: #555 }
 
-.header .logout { position: absolute; padding: 2px 8px 2px 8px; bottom: 13px; right: 20px; background-color: #F0F0F0; float: right; border-radius: 3px; }
-.header .logout a { font-weight: bold; font-size: 14px; color: #888; text-decoration: none; }
+.header .button { position: absolute; padding: 2px 8px 2px 8px; bottom: 13px; background-color: #F0F0F0; float: right; border-radius: 3px; }
+.header .button a { font-weight: bold; font-size: 14px; color: #888; text-decoration: none; }
+.header .logout { right: 20px; }
+.header .settings { right: 106px; }
 .header .name { position: absolute; font-weight: bold; font-size: 24px; top: 30px; left: 20px; text-shadow: 0px 0px 8px #888; }
 .header .address { position: absolute; font-size: 14px; top: 70px; left: 20px; text-shadow: 0px 0px 6px #222; }
 .header .address a { color: #F0F0F0; }
