--- a/mms/web/css/style.css
+++ b/mms/web/css/style.css
@@ -16,7 +16,7 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 .header .address { position: absolute; font-size: 14px; top: 70px; left: 20px; text-shadow: 0px 0px 6px #222; }
 .header .address a { color: #F0F0F0; }
 
-.lightbutton { padding: 3px 4px 3px 4px; background-color: #F0F0F0; border-radius: 3px; text-align: center; cursor: pointer; float: left; margin: 0px 3px 0px 3px; height: 20px; }
+.lightbutton { padding: 3px 4px 3px 4px; background-color: #F0F0F0; border-radius: 3px; text-align: center; cursor: pointer; float: left; margin: 0px 3px 0px 3px; height: 25px; }
 .lightbutton a { font-weight: bold; font-size: 14px; color: #888; text-decoration: none; cursor: pointer; margin: 5px; }
 
 
@@ -91,7 +91,7 @@ html, body { font-family: Georgia; margin: 0px; padding: 0px; overflow: hidden; 
 .datagrid tfoot ul.active, .datagrid tfoot ul a:hover { text-decoration: none;border-color: #00557F; color: #FFFFFF; background: none; background-color:#006699; }
 div.dhtmlx_window_active, div.dhx_modal_cover_dv { position: fixed !important; }
 
-.datagrid .time { width: 60px; text-align: center; }
+.datagrid .time { width: 82px; text-align: center; }
 .datagrid .part { width: 24px; text-align: center; }
 .datagrid .status { width: 60px; text-align: center; }
 
@@ -105,7 +105,7 @@ div.dhtmlx_window_active, div.dhx_modal_cover_dv { position: fixed !important; }
 .bookingdetail-message-cell { font-size: 28px; display: table-cell; width: 100%; height: 100%; text-align: center; vertical-align: middle; color: #888; }
 
 .bookingdetail { padding: 20px; color: #222; }
-.bookingdetail-basic span { font-weight: bold; font-size: 18px; }
+.bookingdetail-basic .highlight { font-weight: bold; font-size: 18px; }
 .bookingdetail-cover { position: relative; }
 .bookingdetail-name { font-size: 22px; font-weight: bold; }
 .bookingdetail-profile-pic { float: left; }
@@ -132,6 +132,15 @@ div.dhtmlx_window_active, div.dhx_modal_cover_dv { position: fixed !important; }
 
 .bookingdetail-history-message { font-size: 18px; width: 100%; padding-top: 20px; margin-bottom: 20px; text-align: center; color: #888; }
 .bookingdetail-history .datagrid { border-bottom: none; }
+
+.bookingdetail-details { float: left; margin-right: 10px; }
+.bookingdetail-edit-details { float: left; margin-right: 10px; }
+
+.bookingdetail-edit-details div { float: left; }
+.bookingdetail-edit-details .dropdown { width: 200px; margin-left: 10px; }
+
+.bookingdetail-edit-details .input-group input { height: 26px; }
+.bookingdetail-edit-details .input-group-addon { padding-top: 4px; padding-bottom: 4px; }
 
 
 /* Login Page */
