--- a/mms/web/css/style.css
+++ b/mms/web/css/style.css
@@ -94,6 +94,7 @@ div.dhtmlx_window_active, div.dhx_modal_cover_dv { position: fixed !important; }
 .datagrid .time { width: 82px; text-align: center; }
 .datagrid .part { width: 24px; text-align: center; }
 .datagrid .status { width: 60px; text-align: center; }
+.datagrid .table { width: 80px; text-align: center; }
 
 .dayview-message-table { display: table; width: 100%; height: 100%; }
 .dayview-message-cell { font-size: 28px; display: table-cell; width: 100%; height: 100%; text-align: center; vertical-align: middle; color: #888; }
