--- a/mms/web/css/style.css
+++ b/mms/web/css/style.css
@@ -99,6 +99,8 @@ div.dhtmlx_window_active, div.dhx_modal_cover_dv { position: fixed !important; }
 .dayview-message-table { display: table; width: 100%; height: 100%; }
 .dayview-message-cell { font-size: 28px; display: table-cell; width: 100%; height: 100%; text-align: center; vertical-align: middle; color: #888; }
 
+.conflict { background-color: #EE9DAD; }
+
 /* Main Page - Detail View */
 
 .bookingdetail-wrapper { position: fixed; top: 101px; bottom: 0px; right: 10px; width: calc(60% - 10px); width: -webkit-calc(60% - 10px); width: -moz-calc(60% - 10px); overflow-y: scroll; -webkit-overflow-scrolling: touch; }
